2004-12-02 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/TestCopyDicom.cxx : the new dicom created is created empty, without
     file name in input
   * src/gdcmSeqEntry.cxx : bug fix in destruction of an element
   * src/gdcmHeader.cxx : bug fix. Keep the string, otherwise it is destroyed.
     The string leaves only in the fonction. So when we make a .c_str(), we
     get the pointeur on the first element, element that will be destroyed 
     immediately after thee instruction.
   * src/gdcmDocument.cxx : remove memory leaks. Bug fix when testing if the
     file has been opened : the test must be made on the content of the 
     pointer and not directly on the pointer !
     Code formatting

2004-12-02 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * gdcmPython/gdcm.i : change gdcmHeaderHelper to gdcmSerieHeader. Now,
     the python part recompiles

2004-11-30 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/ShowDicom.cxx : Change the test to only open one vtkImageViewer.
     Otherwise, under linux (Graphic card : NVidia / SE : FedoraCore 1) the
     X session is killed (for my computer... it seems to not be identic on
     all linux)

2004-11-30 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/ShowDicom.cxx : now can be used with an off-screen rendering to
     avoid problems (otherwise, the difference test between the visible image
     and the reference is incorrect. If the reference is greater than the
     screen resolution, it's produce errors).
     Can be used for only one image. Can be used with a visible flag.
   * vtk/vtkGdcmReader.cxx : remove commented codes.
   * vtk/vtkGdcmReader.h : add the gdcmCommon.h include file to avoid warnings
     under windows at compilation
   * vtk/vtkgdcmViewer.cxx : reformat the file. Apply a default window/level
     for grayscale images
   * vtk/GdcmToBaseline.cxx : new program to easy create the reference image
